--- a/src/styles.css
+++ b/src/styles.css
@@ -93,3 +93,6 @@ span{
   .jvectormap-container {
     background-color: #0000 !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
