--- a/src/app/infirmier/infirmier.component.css
+++ b/src/app/infirmier/infirmier.component.css
@@ -19,5 +19,40 @@ td, th {
 }
 
 input#mat-input-0 {
-  color: #000;
+  color: #fff;
+}
+
+.btn{
+ margin: 5px;
+ font-size: 10px;;
+}
+
+#mat-dialog-0 {
+  background: #000000b8 !important;
+}
+
+.ng-invalid.ng-touched.ng-dirty {
+  color: #fff !important;
+}
+.mat-dialog-container {
+  background: #000000c2 !important;
+  color: #fff !important;
+}
+div#cdk-overlay-0, .cdk-overlay-pane {
+  width: 100% !important;
+}
+.cdk-overlay-pane{
+  width: 350px !important;
+}
+
+
+.mat-dialog-title{
+  color: #000 !important;
+}
+
+.mat-h1, .mat-headline, .mat-typography h1 {
+  font: 400 24px/32px Roboto, "Helvetica Neue", sans-serif;
+  letter-spacing: normal;
+  margin: 0 0 16px;
+  color: #000 !important;
 }
