--- a/src/app/infirmier/infirmier.component.html
+++ b/src/app/infirmier/infirmier.component.html
@@ -3,11 +3,15 @@
   <div class="bg-form">
       <h1>Liste des infirmiers</h1>
 
-    <div style="background-color: white;padding: 5px;">
+    <div style="padding: 5px;">
+
+
+       <button type="button" style="float: right;" mat-raised-button (click)="openDialog()" class="btn btn-success"> Add new nurse </button>
   <mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
+    <mat-label>Search / Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
+
 </div>
 
   <div class="mat-elevation-z8">
@@ -33,6 +37,19 @@
         <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
       </ng-container>
 
+       <!-- Fruit Column -->
+       <ng-container matColumnDef="updateDelete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+        <td mat-cell *matCellDef="let row" >
+          <button type="button" (click)="delete(row.email)" class="btn btn-danger"> Delete nurse </button>
+            <button type="button" mat-raised-button (click)="openDialogUpdate(row.email,row.firstName, row.lastName)" class="btn btn-primary"> Update nurse </button>
+
+           </td>
+      </ng-container>
+
+
+
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
@@ -44,5 +61,6 @@
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
   </div>
+
 </div>
 </div>
