--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -1,1 +1,71 @@
-<p>patient works!</p>
+<div class="container">
+
+  <div class="bg-form">
+      <h1>Patient List</h1>
+
+    <div style="padding: 5px;">
+
+
+       <button type="button" style="float: right;" mat-raised-button (click)="openDialog()" class="btn btn-success"> Add new patient </button>
+  <mat-form-field appearance="standard">
+    <mat-label>Search / Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+
+</div>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+
+
+
+      <!-- Progress Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+        <td mat-cell *matCellDef="let row"> {{row.firstName}} </td>
+      </ng-container>
+
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last name </th>
+        <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="etat">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <td mat-cell *matCellDef="let row"> {{row.etat}} </td>
+      </ng-container>
+
+       <!-- Fruit Column -->
+       <ng-container matColumnDef="updateDelete">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+        <td mat-cell *matCellDef="let row" >
+          <button type="button" (click)="delete(row.email)" class="btn btn-danger"> Delete patient </button>
+            <button type="button" mat-raised-button (click)="openDialogUpdate(row.email,row.firstName, row.lastName,row.etat)" class="btn btn-primary"> Update patient </button>
+
+           </td>
+      </ng-container>
+
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
+
+</div>
+</div>
