--- a/src/app/infirmier/infirmier.component.html
+++ b/src/app/infirmier/infirmier.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="bg-form">
-      <h1>Liste des infirmiers</h1>
+      <h1>Nurses list</h1>
 
     <div style="padding: 5px;">
 
