--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <h1>Login</h1>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-      Email <br>
+      Email or Username <br>
       <input class="form-control" type="email"  formControlName="email" name="">
       Password <br>
       <input class="form-control" type="password" formControlName="password" name="">
