--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,36 @@
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+td, th {
+  width: 20%;
+}
+
 .bg-form {
-  background: #000c;
-  color: #fff;
-  padding: 8% 15%;
+  background: #fffc;
+  color: #000;
+  padding: 5% 5%;
   margin: 5%;
+}
+
+input#mat-input-0 {
+  color: #000;
+}
+
+.btn{
+ margin: 5px;
+ font-size: 10px;;
+}
+
+#mat-dialog-0 {
+  background: #000000b8 !important;
+}
+
+h1 {
+  color: #000 !important;
 }
