--- a/src/app/patient/patient.component.css
+++ b/src/app/patient/patient.component.css
@@ -12,14 +12,14 @@ td, th {
 }
 
 .bg-form {
-  background: #000c;
-  color: #fff;
+  background: #fffc;
+  color: #000;
   padding: 5% 5%;
   margin: 5%;
 }
 
 input#mat-input-0 {
-  color: #fff;
+  color: #000;
 }
 
 .btn{
@@ -31,6 +31,10 @@ input#mat-input-0 {
   background: #000000b8 !important;
 }
 
+h1 {
+  color: #000 !important;
+}
+/*
 .ng-invalid.ng-touched.ng-dirty {
   color: #fff !important;
 }
@@ -56,3 +60,4 @@ div#cdk-overlay-0, .cdk-overlay-pane {
   margin: 0 0 16px;
   color: #000 !important;
 }
+*/
